--- a/styles/map.css
+++ b/styles/map.css
@@ -3,7 +3,7 @@
     flex-direction: column;
 }
 
-/* #quest-list {
+#quest-list {
     position: relative;
     background-image: url("../assets/map.jpg");
     background-size: contain;
@@ -13,17 +13,12 @@
     margin: auto;
 }
 
-.quest {
-    position: absolute;
-    color: white;
-    text-shadow: 1px 1px 1px black;
+h2 {
+    color: rgb(247, 232, 169);
+    font-size: 50px;
+    text-shadow: 0 0 3px rgb(75, 47, 22);
 }
 
-.quest.completed {
-    color: whitesmoke;
-    font-size: .9em;
+link {
+    color: beige;
 }
-
-.quest.completed:after {
-    content: ' ✔';
-} */
